# senti

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  instructions.md  pyproject.toml
apps/agent/: Dockerfile  Dockerfile.sandbox
apps/agent/config/: models.yaml  personality.md  redaction_patterns.yaml  schedules.yaml  skills.yaml
apps/agent/sandbox_images/gdrive/: run.py
apps/agent/sandbox_images/python_runner/: Dockerfile  run.py
apps/agent/sandbox_images/search/: Dockerfile
apps/agent/src/senti/: __main__.py  config.py  exceptions.py
apps/agent/src/senti/controller/: llm_client.py  orchestrator.py  token_guard.py  tool_router.py
apps/agent/src/senti/gateway/: bot.py  filters.py  formatters.py  handlers.py  hitl.py
apps/agent/src/senti/memory/: fact_store.py  memory_store.py
apps/agent/src/senti/sandbox/: executor.py  network.py
apps/agent/src/senti/scheduler/: engine.py  job_store.py  (+1 more)
apps/agent/tests/: test_memory_skill.py  test_memory_store.py  test_skillsmith.py
config/: personality.md  skills.yaml
sandbox_images/email_proxy/: run.py
sandbox_images/search/: run.py
scripts/: gmail_oauth.py
src/senti/: __main__.py  app.py  config.py  logging_config.py
src/senti/controller/: llm_client.py  orchestrator.py  redaction.py  tool_router.py
src/senti/gateway/: bot.py  formatters.py  handlers.py  hitl.py
src/senti/memory/: conversation.py  database.py
src/senti/scheduler/: jobs.py
src/senti/security/: audit.py
src/senti/skills/: base.py  registry.py  user_skill_store.py
src/senti/skills/builtin/: email_skill.py
(+12 files in other folders)
